src/core/Claroline/CoreBundle/Tests/Stub/plugin/Valid/WithLargeIcon/ValidWithLargeIcon.php
<?php

namespace Valid\WithLargeIcon;

use Claroline\CoreBundle\Library\PluginBundle;

class ValidWithLargeIcon extends PluginBundle
{
}